2018-03-17  Jose E. Marchesi  <jemarch@gnu.org>

	* bash/readrec.c (readrec_builtin): Immediately return EX_USAGE if
	no_options returns != 0.  Fixes readrec --help.

2018-03-17  Jose E. Marchesi  <jemarch@gnu.org>

	* utils/recutl.c (recutl_print_version): Update copyright years.
	* bash/readrec.c: Include config.h.
	* bash/Makefile.am (COMMON_CPPFLAGS): Include the builddir lib.
	* src/rec-sex-tab.y: Use new form of %name-prefix.

2018-03-17  gettextize  <bug-gnu-gettext@gnu.org>

	* m4/iconv.m4: Upgrade to gettext-0.19.8.1.
	* m4/lib-ld.m4: Upgrade to gettext-0.19.8.1.
	* m4/lib-link.m4: Upgrade to gettext-0.19.8.1.
	* m4/lib-prefix.m4: Upgrade to gettext-0.19.8.1.
	* m4/progtest.m4: Upgrade to gettext-0.19.8.1.
	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.19.8.

2018-03-17  Jose E. Marchesi  <jemarch@gnu.org>

	* src/Makefile.am (AM_CPPFLAGS): Include the builddir lib.
	* configure.ac: Update version to 1.8.
	* doc/recutils.texi (Bash Builtins): Add missing -f in enable
	example.
	* bash/Makefile.am (COMMON_CPPFLAGS): Add BASH_HEADERS/include to
	the headers search path.

2018-02-24  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Use the subdir-object automake option in
	AM_INIT_AUTOMAKE.

2018-02-15  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* utils/recutl.c (recutl_write_db_to_file): Do not use the current
	directory to hold temporary files.

2017-01-31  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* README-dev: Correct typo.

2017-01-26  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* etc/rec-mode.el: Require tabulated-list.

2016-12-19  Jose E. Marchesi  <jemarch@gnu.org>

	* NEWS: Prepare release 1.8.

2016-10-18  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* etc/rec-mode.el (rec-mode): Fix typo and run the actual
	rec-mode-hook.

2016-10-05  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/rec-mode.el (rec-remove-continuation-line-marker-overlays):
	Fix setq typo.

2016-09-13  Jose E. Marchesi  <jemarch@gnu.org>
