@@ -1,3 +1,8 @@
+2018-03-18  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* src/rec-aggregate.c (REC_AGGREGATE_ACCUM_FUNC): Use %g instead
+	of %zd to print the result of aggregate functions.
+
 2018-03-17  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* bash/readrec.c (readrec_builtin): Immediately return EX_USAGE if
